--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<img src="logo.png" alt="FS & Partners Logo" class="logo">
 	</a>
     <div class="title-section">
-      <h1>DIAC Fee Calculator</h1>
+      <h1>DIAC Fees Calculator</h1>
       <p>(As per <a href="https://dhcdiac.nic.in/diac-administrative-cost-arbitrators-fees-rules-2018/" target="_blank">The Delhi International Arbitration Centre (Administrative Cost and Arbitrators Fees) Rules - 2018
 	  </a>)</p>
     </div>
@@ -55,3 +55,4 @@
   </footer>
 </body>
 </html>
+
