--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>DIAC Fee Calculator</title>
+  <title>DIAC Fees Calculator | FS & Partners</title>
   <link href="https://fonts.googleapis.com/css2?family=Bree+Serif&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
   <script src="diac.js" defer></script>
@@ -11,7 +11,7 @@
 <body>
   <div class="header-content">
     <a href="https://www.linkedin.com/company/fs-partners-advocates/" target="_blank">
-	<img src="logo.png" alt="FS & Partners Logo" class="logo">
+	<img src="logo.png" alt="DIAC Fees Calculator" class="logo">
 	</a>
     <div class="title-section">
       <h1>DIAC Fees Calculator</h1>
@@ -55,4 +55,5 @@
   </footer>
 </body>
 </html>
+
 
