--- a/index.html
+++ b/index.html
@@ -4,7 +4,23 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>DIAC Fees Calculator | FS & Partners</title>
-  <link href="https://fonts.googleapis.com/css2?family=Bree+Serif&display=swap" rel="stylesheet">
+<meta property="og:title" content="DIAC Fees Calculator | FS & Partners" />
+<meta property="og:description" content="Instant DIAC Arbitration Fees Calculator. Calculate arbitrator’s fees, administrative charges, and costs as per Delhi International Arbitration Centre rules." />
+<meta property="og:image" content="https://diacfeescalculator.fspartners.in/og-image.jpg" />
+<meta property="og:url" content="https://diacfeescalculator.fspartners.in/" />
+<meta property="og:type" content="website" />
+
+<!-- Optional: Twitter card tags for better display on Twitter -->
+<meta name="twitter:card" content="summary_large_image" />
+<meta name="twitter:title" content="DIAC Fees Calculator | FS & Partners" />
+<meta name="twitter:description" content="Instant DIAC Arbitration Fees Calculator. Calculate arbitrator’s fees, administrative charges, and costs as per Delhi International Arbitration Centre rules." />
+<meta name="twitter:image" content="https://diacfeescalculator.fspartners.in/og-image.jpg" />
+<link rel="manifest" href="manifest.json" />
+<link rel="apple-touch-icon" href="icon.png">
+<meta name="apple-mobile-web-app-capable" content="yes">
+<meta name="apple-mobile-web-app-title" content="DIAC Fees Calculator">
+<meta name="apple-mobile-web-app-status-bar-style" content="default">
+	<link href="https://fonts.googleapis.com/css2?family=Bree+Serif&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
   <script src="diac.js" defer></script>
 </head>
@@ -55,5 +71,6 @@
   </footer>
 </body>
 </html>
+
 
 
