--- a/diac.html
+++ b/diac.html
@@ -7,6 +7,22 @@
   <link href="https://fonts.googleapis.com/css2?family=Bree+Serif&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
   <script src="diac.js" defer></script>
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "WebApplication",
+  "name": "DIAC Fees Calculator",
+  "url": "https://diacfeescalculator.fsparters.in/",
+  "description": "Instant DIAC Fees Calculator by FS & Partners. Calculate arbitrator’s fees, administrative charges, and costs as per DIAC rules.",
+  "applicationCategory": "LegalService",
+  "provider": {
+    "@type": "LegalService",
+    "name": "FS & Partners",
+    "url": "https://fsparters.in/"
+  }
+}
+</script>
+
 </head>
 <body>
   <div class="header-content">
@@ -55,3 +71,4 @@
   </footer>
 </body>
 </html>
+
